Correction bis sur la position des clouds et trees sur la version mobile

--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -127,4 +127,7 @@
             height: 220px;
         }
     }
+    .tree-5{
+        display: none;
+    }
 }
